Added logic to detect restocks